fix: introduce dev and test profiles to resolve GitHub Actions connection refused